# pico_msc

./: .gitmodules  CMakeLists.txt  README.md  ffconf.cmake  msc_config.h  pico_msc.cmake  pico_msc.h
linker/: custom_linker_script.ld
src/: disk.c  fat.c  fat.h  ffconf.h  flash.h  flash_functions.c  flash_functions.h  msc_disk.c  msc_disk.h  pico_msc.c  pico_msc.h  usb_callbacks.c  usb_descriptors.c
tools/: modify_uf2.py
